chore: Aggiunto uno script pm.js che deduce il package manager dell'utente evitando di assumere l’uso di npm. Rimossi i lockfile dal versioning del root, client e server

--- a/.gitignore
+++ b/.gitignore
@@ -47,8 +47,11 @@ Thumbs.db
 .DS_STORE
 
 # Lock files (opzionale - rimuovi se vuoi tracciare lock files)
-# package-lock.json
-# yarn.lock
+package-lock.json
+npm-shrinkwrap.json
+yarn.lock
+pnpm-lock.yaml
+bun.lockb
 
 # Temporary
 *.tmp
